--- a/app/Views/people/view.html
+++ b/app/Views/people/view.html
@@ -12,11 +12,18 @@
                             Back to Organization
                         </a>
                     </div>
-                    
+
                     <div class="btn-group" role="group">
                         <a href="/organization/{{ org_id }}/people/edit/{{ person.getId() }}" class="btn btn-primary">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             Edit Contact
+                        </a>
+                    </div>
+
+                    <div class="btn-group" role="group">
+                        <a href="/organization/{{ org_id }}/people/delete/{{ person.getId() }}" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            Delete Contact
                         </a>
                     </div>
                 </div>
